modules/web/js/ballerina/components/transform-statement.css
.btn-add {
    color: #446191;
}

.btn-remove {
    color: #bababb;
    float: right;
    background: #666769;
    height: 30px;
    padding: 4px 16px;
}

.selector {
    margin: auto;
    padding: 10px;
}

.data-mapper-container {
    position: relative;
    width: 100%;
    height: 100px;
}

.property-name {
    padding: 5px;
    font-size: 0.94em;
    color: #666769;
}

.property-type {
    padding: 5px;
    color: #3d3d3d;
}

.type-mapper-icon {
    padding: 10px;
}

.leftType {
    width: 300px;
    height: calc(100% - 10px);
    margin-top: 105px;
    margin-left: 20px;
    background: #fefefe;
    color: #3d3d3d;
    float: left;
    position: relative;
    overflow: auto;
}

.middle-content {
    width: calc(100% - 680px);
    height: calc(100% - 130px);
    background: #fff;
    color: #3d3d3d;
    float: left;
    position: relative;
    overflow: auto;
    border: 1px dashed #ccc;
    margin: 60px 20px;
}

.rightType {
    width: 300px;
    height: calc(100% - 10px);
    margin-top: -2px;
    margin-right: 20px;
    background: #fefefe;
    color: #3d3d3d;
    position: relative;
    float: right;
    overflow: auto;
}

.struct {;
    color: #3d3d3d;
    position: absolute;
    border-top: 1px;
    width: 100%;
    background-color: #dcdcdc;
    height: 30px;
}

.variable {
    display: block;
    width: 100%;
    color: #3d3d3d;
    position: absolute;
    border-top: 1px;
    background-color: #dcdcdc;
    height: 30px;
}

.variable-content:hover,
.variable-content:hover > span {
    color: #f17b31 !important;
}

.variable-content {
    cursor: pointer;
}

.property {
    padding: 5;
    font-size: 0.94em;
    color: #666769;
}

svg.plumbConnect path {
    stroke: #3d3d3d;
}

.typeMapperList {
    display: none;
}

.jstree-default .jstree-hovered {
    color: #000000;
}

.jstree-default .jstree-anchor {
    line-height: 24px;
    height: 28px;
}

.func {
    width: 300px;
    height: auto;
    background: #f6f6f6;;
    color: #fff;
    position: absolute;
    font-size: 0.94em;
}

.func-property {
    padding: 5;
    font-size: 16px;
    background-color: #fff;
    border: 2px;
    color: #666769;
}

.func-in-property {
    padding: 5;
    font-size: 16px;
    background-color: #fff;
    border: 2px;
    color: #666769;
    cursor: pointer;
}

.func-out-property {
    padding: 2;
    font-size: 16px;
    background-color: #fff;
    border: 2px;
    color: #666769;
    cursor: pointer;
}

.jstree-themeicon {
    display: none !important;
}

.jstree-default .jstree-hovered {
    background: transparent !important;
    border: none !important;
    color: #f17b31 !important;
}

.transformContextMenu {
    position: fixed;
    border: 1px solid #666769;
    padding: 5px;
    display: none;
    background-color: #ffffff;
}

.func-output {
    width: 150px;
    height: calc(100% - 33px);
    border-top: none;
    border-right: none;
    border-bottom: none;
    background-color: transparent;
    color: #446191;
    position: relative;
}

.func-input {
    width: 150px;
    height: calc(100% - 33px);
    border-top: none;
    border-right: none;
    border-bottom: none;
    background-color: transparent;
    color: #446191;
    position: relative;
    float: left;
}

.source-view {
    width: 300px;
    height: 50px;
    margin-top: 60px;
    margin-left: 20px;
    color: #3d3d3d;
    float: left;
    position: absolute;
    z-index: 30;
}

.target-view {
    width: 300px;
    height: 50px;
    margin-top: 60px;
    margin-right: 20px;
    color: #3d3d3d;
    float: right;
    position: relative;
    z-index: 30;
}

.type-mapper-combo, .source-view > .select2-container, .target-view > .select2-container {
    top: 10px;
    left: 10px;
    width: 250px !important;
    position: absolute;
    height: 30px
}

.transformOverlay-content .react-autosuggest__input {
    padding-left: 10px;
    height: 31px;
    width: 270px;
    background-color: #f3f3f3;
    border: 0;
}

.transformOverlay-content .react-autosuggest__container {

}

.transformOverlay-content .react-autosuggest__suggestion {
    padding-left: 10px;
    background: #eee;
}

.transformOverlay-content .react-autosuggest__suggestions-list {
    top: 40px;
    width: 269px;
    margin: 0;
    list-style-type: none;
    border: 1px solid #e4e4e4;
}

.transformOverlay-content .react-autosuggest__suggestions-container {
    width: 269px;
}

.type-select-header {
    padding-top: 15px;
    padding-left: 10px;
}

.transformOverlay {
    position: fixed;
    padding-left: 280px;
    padding-top: 83px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

.transformOverlay-content {
    background-color: #fefefe;
    margin: auto;
    width: 100%;
    height: 100%;
    min-width: 1020px;
    z-index: 30;
    pointer-events: auto;

}

/* The Close Button */
.close-transform {
    color: #fff;
    left: 4px;
    top: 0;
    position: absolute;
    z-index: 41;
    cursor: pointer;
    padding: 8px 10px;
    background-color: #f17b31;
}

.close-transform:hover,
.close-transform:focus {
    color: #f2f2f2;
    padding-right: 10px;
}

.transform-header {
    width: 100%;
    height: 30px;
    background-color: #f3f3f3;
    z-index: 40;
    position: absolute;
    color: #f3f3f3;
    border-bottom: 1px solid #dedede;
}

.transform-header-padding {
    width: 100%;
    height: 60px;
    background-color: #fff;
    z-index: 38;
    position: absolute;
}

.transform-footer {
    width: 100%;
    height: 100%;
    background-color: #fff;
    position: absolute;
    top: calc(100% - 35px);
    z-index: 7
}

.transform-header-text {
    color: #343434;
    padding: 5px 5px 5px 35px;
    font-size: 14px;
}

.transform-action {
    cursor: pointer;
    text-anchor: middle;
    dominant-baseline: central;
    width: 120px;
    max-width: 250px;
}

.transform-action-button{
    width:28px;
    height:30px;
    fill: #666769;
}

.transform-action-icon {
    cursor: pointer;
}

.property-pane-action-button-delete:hover{
    opacity: 0.5;
}

.transform-header-icon {
    padding: 1px 5px 5px;
    font-size: 16px;
    width: 27px;
}

.type-mapper-con-remove {
    font-size: 0.94em;
    color: #666769;
}

.btn-add-type {
    background-color: #666769;
    top: 0;
    left: 269px;
    position: absolute;
    color: #fff;
    height: 30px;
    width: 30px;
    padding-top: 7px;
}

.btn-remove-type {
    color: #666769;
    top: 10px;
    left: 260px;
    position: absolute;
}

.function-header{
    background-color: #3397db;
    height: 30px;
}

.btn-add-type i{
    margin-top: -2px;
}
.type-mapper-header-wrapper{
    background-color:#dbdbdb;
    height: 30px;
}
.middle-content-title{
    color: #d8d8d8;
    text-align: center;
    width: 100%;
    font-weight: 400;
    font-size: 20px;
    padding-left: 220px;
}

.transform-button:hover{
    fill:green;
    cursor: pointer;
}
.function-header-label{
    margin-top: -2px;
}
.jstree-default > .jstree-container-ul > .jstree-node {
    margin-left: 0;
    margin-right: 0;
    height: 30px;
}

